--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
       <title> Codes </title>
   </head>
-  <body>
+  <body style="background-color: lightgreen;">
       <h2> Rabin Karp Algorithm - Fix Bug </h2>
       <p> Given a text T and a pattern P, implement the Rabin-Karp algorithm to print all occurrences of P in T. Assume that only digits will be given as input. For example, if T is "235902314152673992" and P is "31415", then print the indices of occurrences (programming index). </p>
       <p> Note: The code given has a bug, fix it. </p>
