--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title> Codes </title>
+      <title> String Matching Rabin Karp </title>
   </head>
   <body style="background-color: lightgreen;">
       <h2> Rabin Karp Algorithm - Fix Bug </h2>
