--- a/index.html
+++ b/index.html
@@ -193,5 +193,97 @@ int main() {
     cout << solve(m, n);
 }
       </pre>
+      <h2> Rabin Karp Algorithm - Simple Preprocessing Function </h2>
+<p> Given a text T and a pattern P, implement the Rabin-Karp algorithm with a simple preprocessing function to map characters to numerical values. The function returns 0-9 for digits, 10-35 for uppercase letters, and 36-61 for lowercase letters. Count the number of spurious hits and print the positions of occurrences of P in T. </p>
+
+<p> Input Format: </p>
+<ul>
+    <li> First line contains the text T </li>
+    <li> Next line contains the pattern P </li>
+    <li> Next line contains the total number of characters in the input alphabet </li>
+    <li> Next line contains a prime number </li>
+</ul>
+
+<p> Output Format: </p>
+<ul>
+    <li> Print the number of spurious hits </li>
+    <li> Print the positions of occurrences of P in T (one per line) </li>
+</ul>
+
+<h3> Code: </h3>
+<pre><code>
+#include |iostream>
+using namespace std;
+#include |string>
+#include |math.h>
+#include |vector>
+
+int valueOf(char ch) {
+    if(ch >= '0' && ch <= '9') 
+        return ch - '0';
+    if(ch >= 'A' && ch <= 'Z') 
+        return ch - 'A' + 10; 
+    if(ch >= 'a' && ch <= 'z') 
+        return ch - 'a' + 36; 
+    return 0; 
+}
+
+bool check_characters(string T, string P, int s) {
+    int n,m,i;
+    n = T.length();
+    m = P.length();
+    for(i=0;i<m;i++) {
+        if(P[i]!=T[s+i])
+            return false;
+    }
+    return true;
+}
+
+void rabin_karp_matcher(string T, string P, int d, int q) {
+    int sp=0;
+    vector<int> arr;
+    int n, m, h, p, t0, i,s;
+    n = T.length();
+    m = P.length();
+    h = (int)pow(d,m-1)%q;
+    p = 0;
+    t0 = 0;
+
+    for(i=0;i<m;i++) {
+        p = (d*p + valueOf(P[i]))%q;
+        t0 = (d*t0 + valueOf(T[i]))%q;
+    }
+
+    for(s=-1;s<n-m;s++) {
+        if(p==t0) {
+            if(check_characters(T,P,s+1)) {
+                arr.push_back(s+1);  
+            } else {
+                sp+=1;
+            }
+        }
+        if(s<n-m) {
+            t0 = (d*(t0-valueOf(T[s+1])*h)+valueOf(T[s+m+1]))%q;
+            if(t0<0) {
+                t0+=q;
+            }
+        }
+    }
+
+    cout << sp <<endl;
+    for(int i=0; i<arr.size(); i++) {
+        cout << arr[i] <<endl;
+    }
+}
+
+int main() {
+    string T, P;
+    int d,q;
+    cin>>T>>P;
+    cin>>d>>q;
+    rabin_karp_matcher(T,P,d,q);
+}
+</code></pre>
+
   </body>
 </html>
