--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@ int main() {
 
 <h3> Code: </h3>
 <pre><code>
-#include |iostream>
+#include &lt;iostream&gt;
 using namespace std;
-#include |string>
-#include |math.h>
-#include |vector>
+#include &lt;string&gt;
+#include &lt;math.h&gt;
+#include &lt;vector&gt;
 
 int valueOf(char ch) {
     if(ch >= '0' && ch <= '9') 
@@ -232,7 +232,7 @@ bool check_characters(string T, string P, int s) {
     int n,m,i;
     n = T.length();
     m = P.length();
-    for(i=0;i<m;i++) {
+    for(i=0;i&lt;m;i++) {
         if(P[i]!=T[s+i])
             return false;
     }
@@ -241,7 +241,7 @@ bool check_characters(string T, string P, int s) {
 
 void rabin_karp_matcher(string T, string P, int d, int q) {
     int sp=0;
-    vector<int> arr;
+    vector&lt;int&gt; arr;
     int n, m, h, p, t0, i,s;
     n = T.length();
     m = P.length();
@@ -249,38 +249,39 @@ void rabin_karp_matcher(string T, string P, int d, int q) {
     p = 0;
     t0 = 0;
 
-    for(i=0;i<m;i++) {
+    for(i=0;i&lt;m;i++) {
         p = (d*p + valueOf(P[i]))%q;
         t0 = (d*t0 + valueOf(T[i]))%q;
     }
 
-    for(s=-1;s<n-m;s++) {
+    for(s=-1;s&lt;n-m;s++) {
         if(p==t0) {
             if(check_characters(T,P,s+1)) {
                 arr.push_back(s+1);  
-            } else {
+            }
+            else{
                 sp+=1;
             }
         }
-        if(s<n-m) {
+        if(s&lt;n-m){
             t0 = (d*(t0-valueOf(T[s+1])*h)+valueOf(T[s+m+1]))%q;
-            if(t0<0) {
+            if(t0&lt;0){
                 t0+=q;
             }
         }
     }
 
-    cout << sp <<endl;
-    for(int i=0; i<arr.size(); i++) {
-        cout << arr[i] <<endl;
+    cout &lt;&lt; sp &lt;&lt;endl;
+    for(int i=0; i&lt;arr.size(); i++){
+        cout &lt;&lt; arr[i] &lt;&lt;endl;
     }
 }
 
 int main() {
     string T, P;
     int d,q;
-    cin>>T>>P;
-    cin>>d>>q;
+    cin&gt;&gt;T&gt;&gt;P;
+    cin&gt;&gt;d&gt;&gt;q;
     rabin_karp_matcher(T,P,d,q);
 }
 </code></pre>
