--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ void rabinkarp(string T, string P, int d, int q){
     for(int i=0; i&lt;n-m; i++){
         if(p==t0){
             if(check(P,T,i)){
-                cout &lt;&lt; "Pattern found at index "<<i+1&lt;&lt;endl;
+                cout &lt;&lt; "Pattern found at index " &lt;&lt;/i +1&lt;&lt;endl;
             }
             else{
                 cout &lt;&lt; "Spurious hit" &lt;&lt; endl;
